# serializer version: 1
# name: test_hvac_device_state[tests/fixtures/hvac-cooling.yaml]
  tuple(
    'cool',
    ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
        'off',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Family Room',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: 'cooling',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        'off',
        'cool',
        'heat',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature.TARGET_TEMPERATURE_RANGE|FAN_MODE|TURN_OFF|TURN_ON: 394>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
    }),
  )
# ---
# name: test_hvac_device_state[tests/fixtures/hvac-off.yaml]
  tuple(
    'off',
    ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
        'off',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Family Room',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: 'off',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        'off',
        'cool',
        'heat',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature.TARGET_TEMPERATURE_RANGE|FAN_MODE|TURN_OFF|TURN_ON: 394>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
    }),
  )
# ---
# name: test_hvac_device_state[tests/fixtures/hvac-very-low.yaml]
  tuple(
    'cool',
    ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
        'off',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Family Room',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: 'cooling',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        'off',
        'cool',
        'heat',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature.TARGET_TEMPERATURE_RANGE|FAN_MODE|TURN_OFF|TURN_ON: 394>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
    }),
  )
# ---
